--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,15 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Customs
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter , .fade-leave-to {
+  opacity: 0;
+}
+
+.input-error {
+  border-color: #e3342f !important;
+}
