--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,21 @@
 // Variables
 @import 'variables';
 
+// Font awesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.input-error{
+    border-color: #b22222;
+}
+
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to {
+    opacity: 0;
+}
